--- a/app/globals.css
+++ b/app/globals.css
@@ -50,6 +50,13 @@ body {
     background-repeat: no-repeat;
   }
 
+  .swiper-slide {
+    margin-right: 20px;
+  }
+
+  .popular-categories-swiper .swiper-slide {
+    margin-right: 20px;
+  }
   /* Hide scrollbar for Chrome, Safari and Opera */
   .scrollbar-hide::-webkit-scrollbar {
     display: none;
