Refactor the popular categories section

--- a/app/globals.css
+++ b/app/globals.css
@@ -67,4 +67,8 @@ body {
     -ms-overflow-style: none; /* IE and Edge */
     scrollbar-width: none; /* Firefox */
   }
+
+  .carousel-slider {
+    transition: transform 300ms ease;
+  }
 }
